# Arsenal_Spurs

./: .gitignore  README.md  REPORTE_EJECUTIVO_2526.md  arsenal_spurs_2026_prediction_dashboard.html  arsenal_spurs_2026_prediction_dashboard_v2.html  pyproject.toml
.agents/data-science-expert/: SKILL.md  data-science-expert.skill
.agents/data-science-expert/references/: dashboard_design.md
.agents/web-devops/: SKILL.md
.agents/web-devops/references/: security.md
data/powerBi/powerBiTheme/: theme.json
src/arsenal_spurs_prediction/: export_dashboard.py  export_power_bi.py  main.py  pipeline.py  visualizations.py
src/arsenal_spurs_prediction/data/: ingestion.py
src/arsenal_spurs_prediction/models/: context.py  dixon_coles.py
src/arsenal_spurs_prediction/simulation/: monte_carlo.py
tests/: test_dixon_coles.py  test_models.py  test_pipeline.py  test_simulation.py
