[project]
name = "arsenal-spurs-prediction"
version = "0.1.0"
description = "A professional predictive system for Premier League and Champions League outcomes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "soccerdata>=1.6.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "catboost>=1.2.0",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.scripts]
predict = "arsenal_spurs_prediction.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PTH" # flake8-use-pathlib
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/arsenal_spurs_prediction"]
